--- a/cnw.html
+++ b/cnw.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <meta http-equiv="refresh" content="0;url=navigation.xq"/>
+        <meta http-equiv="refresh" content="5;url=navigation.xq"/>
         <meta http-equiv="Content-Type" content="application/xhtml+xml;charset=UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
         <link type="text/css" href="/editor/style/dcm.css" rel="stylesheet"/>
         <link type="text/css" href="/editor/style/cnw.css" rel="stylesheet"/>
         <link rel="stylesheet" type="text/css" href="/editor/style/public_list_style.css"/>
         <script type="text/javascript">
-            window.location.href = "navigation.xq";
+            window.location.href = "cnw/navigation.xq";
         </script>
         <title>Carl Nielsen Works Catalogue (CNW)</title>
     </head>
@@ -26,14 +26,14 @@
                 <h2>Carl Nielsen Works Catalogue</h2>
             </div>
             <div id="menu" class="noprint">
-                <a href="preface.xq" class="">Preface</a>
-                <a href="introduction.xq" class="">Introduction</a>
-                <a href="navigation.xq" class="selected">Catalogue</a>
-                <a href="about.xq" class="">About CNW</a>
+                <a href="cnw/preface.xq" class="">Preface</a>
+                <a href="cnw/introduction.xq" class="">Introduction</a>
+                <a href="cnw/navigation.xq" class="selected">Catalogue</a>
+                <a href="cnw/about.xq" class="">About CNW</a>
             </div>
             <div id="main">
                 <div class="content_box">
-                    <p>If you are not redirected automatically, follow this <a href='navigation.xq'>link to the CNW catalogue</a></p>
+                    <p>If you are not redirected automatically, follow this <a href='cnw/navigation.xq'>link to the CNW catalogue</a></p>
                     </div>
                 </div>
             <div id="footer">
@@ -41,7 +41,7 @@
                     <img style="border: 0px; vertical-align:middle;" alt="DCM Logo" src="/editor/images/dcm_logo_small_white.png" id="dcm_logo"/>
                     <img style="border: 0px; vertical-align:middle;" alt="DCM Logo" src="/editor/images/dcm_logo_small.png" id="dcm_logo_print"/>
                 </a>
-                2013 Danish Centre for Music Publication | The Royal Library, Copenhagen | <a name="www.kb.dk" id="www.kb.dk" href="http://www.kb.dk/dcm">www.kb.dk/dcm</a>
+                2014 Danish Centre for Music Publication | The Royal Library, Copenhagen | <a name="www.kb.dk" id="www.kb.dk" href="http://www.kb.dk/dcm">www.kb.dk/dcm</a>
             </div>
         </div>
     </body>
