Added CNB end date
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@104 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cnw/preface.html
+++ b/cnw/preface.html
@@ -41,7 +41,7 @@
             <p>Biographical as well as bibliographic information has also been drawn from a number of other
                 sources, among others the <a class="abbr" 
                     href="javascript:void(0);"><i>Carl Nielsen Letters</i><span class="expan">John Fellow (ed.), <i>Carl
-                        Nielsen Brevudgaven</i>. Copenhagen 2005–</span></a>, the publication
+                        Nielsen Brevudgaven</i>. Copenhagen 2005–2015</span></a>, the publication
                 of Nielsen&apos;s other <a class="abbr" 
                     href="javascript:void(0);"><i>essays</i><span class="expan">John Fellow (ed.), <i>Carl
                         Nielsen til sin samtid</i>. Copenhagen 1999</span></a>, and the current bibliography
