added expansion to 'CNB'
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@111 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cnw/appendix.html
+++ b/cnw/appendix.html
@@ -403,7 +403,7 @@ København</span></a> <a class="abbr" href="javascript:void(0);">CNS<span class=
                 </div>
                 <div><p class="work_number"><a class="anchor" name="CNW_C_4">CNW C 4</a></p>
                     <p><i>Drossel i Villa Medicis Have</i>. Transcriptions of a thrush's song dated
-                        '18-4-1900 Kl. 5½'. Facsimile in CNB 2, p. 183. </p>
+                        '18-4-1900 Kl. 5½'. Facsimile in <a class="abbr" href="javascript:void(0);">CNB<span class="expan">John Fellow (ed.): <i>Carl Nielsen Brevudgaven</i>. Multivers: Copenhagen 2005–2015. </span></a> II, p. 183. </p>
                 </div>
             </div>
             <h2><a class="anchor" name="D">D. Doubtful and spurious compositions</a></h2>
@@ -423,7 +423,8 @@ København</span></a> <a class="abbr" href="javascript:void(0);">CNS<span class=
                     (Copenhagen 1947), vol. 2, pp. 334, 355 and 359.<br /> Information on this
                     composition, however, is probably based only on a note in Nielsen's calendar on
                     23 September 1931 reading as follows: 'Einar Skovrup. Foredrag og Konsert / “Det
-                    som lysner over Vangen” / Kl 1 Komponistforeningen' (quot. CNB XI/793).
+                    som lysner over Vangen” / Kl 1 Komponistforeningen' (quot. <a class="abbr" href="javascript:void(0);">CNB<span class="expan">John Fellow (ed.): 
+                        <i>Carl Nielsen Brevudgaven</i>. Multivers: Copenhagen 2005–2015. </span></a> XI/793).
                     The title seems to refer to the lecture and recital at
                     Komponistforeningen, not to an unknown song by Nielsen. The text 'Det, som
                     lysner over Vangen', <i>Sang til Vallekilde </i>[<i>Højskole</i>] of 1876, is by
