a few corrections to the appendix. appendix now mentioned in the introduction
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@115 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cnw/appendix.html
+++ b/cnw/appendix.html
@@ -181,7 +181,7 @@ København</span></a> <a class="abbr" href="javascript:void(0);">CNS<span class=
                     <p>&#160;<br/>
                         <span style="font-size: 1.1em;">CNW B 8–47: Nielsen's arrangements for two or three equal voices of forty
                             Danish, Swedish and Norwegian songs for <i>Melodier til Sangbogen
-                                Danmark</i>(MtSD), Wilhelm Hansen (1924)</span></p>
+                                Danmark</i> (MtSD), Wilhelm Hansen (1924)</span></p>
                 </div>
                 <div><p class="work_number"><a class="anchor" name="CNW_B_8">CNW B 8</a></p>
                     <p>Anonymous (ballad tune): 'Dronning Dagmar ligger i Ribe syg' for three voices
@@ -979,7 +979,7 @@ København</span></a> <a class="abbr" href="javascript:void(0);">CNS<span class=
                     </div>
                 </div>
                 <div><p class="work_number"><a class="work_number_reference" name="CNW_330" href="document.xq?doc=cnw0330.xml">CNW 330</a></p>
-                    <div>'Vi er Jyder, Børn af Landet' 
+                    <div><i>Vi Jyder</i> 'Vi er Jyder, Børn af Landet' 
                         <ul class="bullet">
                             <li>arranged for SATB by Georg Fjeldrad, Kaaber, Århus (1929)</li>
                     </ul>
@@ -1011,15 +1011,6 @@ København</span></a> <a class="abbr" href="javascript:void(0);">CNS<span class=
                     </ul>
                     </div>
                 </div>
-                <div><p class="work_number"><a class="work_number_reference" name="CNW_381" href="document.xq?doc=cnw0383.xml">CNW 381</a></p>
-                    <div>'Den kedsom Vinter gik sin Gang' 
-                        <ul class="bullet">
-                            <li>arranged for piano (with text) by C.C. Gad,
-                        in: <i>Melodisamling til De unges Sangbog udgivet af K. F. U. M. og K. F. U.
-                            K. i Danmark</i>, Århus (1929)</li>
-                    </ul>
-                    </div>
-                </div>
                 <div><p class="work_number"><a class="work_number_reference" name="CNW_374" href="document.xq?doc=cnw0376.xml">CNW 374</a></p>
                     <div>'Kom blankeste Sol' 
                         <ul class="bullet">
@@ -1035,6 +1026,15 @@ København</span></a> <a class="abbr" href="javascript:void(0);">CNS<span class=
 København</span></a>, D
                         244, mu 9011.1504) </li>
                     </ul>
+                    </div>
+                </div>
+                <div><p class="work_number"><a class="work_number_reference" name="CNW_381" href="document.xq?doc=cnw0383.xml">CNW 381</a></p>
+                    <div>'Den kedsom Vinter gik sin Gang' 
+                        <ul class="bullet">
+                            <li>arranged for piano (with text) by C.C. Gad,
+                                in: <i>Melodisamling til De unges Sangbog udgivet af K. F. U. M. og K. F. U.
+                                    K. i Danmark</i>, Århus (1929)</li>
+                        </ul>
                     </div>
                 </div>
             </div>
