--- a/cnw/introduction.html
+++ b/cnw/introduction.html
@@ -84,10 +84,14 @@ concept. The catalogue must inevitably operate with an either–or: a
 composition may be seen as either an independent work – hence assigned a CNW
 number – or may fall outside the chosen delimitation and therefore does not appear
 with its own unique number. </p>
-<p>In essence CNW includes
-compositions which are complete in structure though not necessarily so in detail.
-Thus fragments of compositions, which as far as is known were never
-finished, are not listed. </p>
+<p>In essence the CNW main catalogue includes
+compositions which are complete in structure though not necessarily so in detail. 
+Works now regarded as lost are included if their former existence seems to be evident.
+Fragments of compositions, which as far as is known were never
+finished, are listed in the <a href="appendix.xq">appendix</a> instead. </p>
+        <p>The <a href="appendix.xq">appendix</a> also lists Nielsen's arrangements of other composers' works,
+          doubtful and spurious compositions, and finally arrangements of Nielsen's works by others. 
+        </p>
 
 <div class="toplink noprint"><a href="#top">To top of page</a></div>
 <h3><a name="excerpts">Works and excerpts</a></h3>
