fixed a couple of typos
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@122 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cnw/appendix.html
+++ b/cnw/appendix.html
@@ -825,7 +825,7 @@ København</span></a>, DMF 0513 H2)</li>
                 </div>
                 <div><p class="work_number"><a class="work_number_reference" name="CNW_237" href="document.xq?doc=cnw0237.xml">CNW 237</a></p>
                     <div><i>Sangen til Danmark</i> 'Som en rejselysten Flaade' <ul class="bullet">
-                            <li>arranged for SATB (G major) by Hakon Andersen, privat lithogrphy
+                            <li>arranged for SATB (G major) by Hakon Andersen, private lithography
                                 (1921)</li>
                             <li>arranged for SATB (A major) by Hakon Andersen, Wilhelm Hansen (1921); also in: <i>Gymnasiesangbogen</i>, Wilhelm Hansen (1929)</li>
                             <li>arranged for TTBB (B flat major) by Hakon Andersen (1921)</li>
