--- a/cnw/appendix.html
+++ b/cnw/appendix.html
@@ -147,7 +147,10 @@ København</span></a> <a class="abbr" href="javascript:void(0);">CNS<span class=
                     <p class="work_number"><a class="anchor" name="CNW_B_3">CNW B 3</a></p>
                     <p>Victor Bendix: <i>Fire Korsange med Orchester til Texter af Karin Michaëlis</i>, orchestrated by
                         Nielsen (<a class="abbr rism" href="javascript:void(0);">DK-Kk<span class="expan">Det Kongelige Bibliotek, 
-København</span></a> <a class="abbr" href="javascript:void(0);">CNS<span class="expan">Birgit Bjørnum &amp; Klaus Møllerhøj: <i>Carl Nielsens Samling. Katalog over komponistens musikhåndskrifter i Det kongelige Bibliotek / The Carl Nielsen Collection. A Catalogue of the Composer's Musical Manuscripts in the Royal Library</i>. The Royal Library: Copenhagen 1992. </span></a> 425 add.; titled <i>Tre</i> [sic] <i>Korsange med
+                        København</span></a> <a class="abbr" href="javascript:void(0);">CNS<span class="expan">Birgit Bjørnum &amp; Klaus Møllerhøj: 
+                            <i>Carl Nielsens Samling. Katalog over komponistens musikhåndskrifter i Det kongelige Bibliotek / The Carl Nielsen Collection. 
+                            A Catalogue of the Composer's Musical Manuscripts in the Royal Library</i>. The Royal Library: Copenhagen 1992. </span></a> 
+                        425 (add.); in CNS 419 (add.). Titled <i>Tre</i> [sic] <i>Korsange med
                             Orchester til Texter af Karin Michaëlis</i>): <br/>
                         No. 1. <i>Nytaarsnat</i> 'Det Aar der svandt' <br /> No. 2. <i>Skovsang</i>
                         'Der rider en Junker' <br /> No. 3. <i>Nocturne</i> 'Den tavse Nat er som en
