--- a/cnw/introduction.html
+++ b/cnw/introduction.html
@@ -302,7 +302,7 @@ href="document.xq?doc=cnw0173.xml">CNW 173</a> and <i>Jeg gik i marken og vogted
 class="work_number_reference" title="View work details" href="document.xq?doc=cnw0327.xml">CNW 327</a>. 
 From an orthographical point of view, the titles in general expose a
 heterogeneous and a seemingly inconsistent practice which, however, has
-been retained rather than modernized, partly because it would be just as dated
+been retained rather than modernized, partly because modernized spelling would be just as dated
 (though to a later time) and partly because modernization is also a question
 of degree which in the extreme would not only include
 spelling and punctuation but also the choice of words.</p>
