eliminated remaining connections to /editor/
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@136 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cnw/introduction.html
+++ b/cnw/introduction.html
@@ -262,7 +262,7 @@ result further (logically &apos;AND&apos;). Each delimiting parameter (filter) i
 at the top of the list of search results when the search has been completed. Each filter may be removed
 one at a time by clicking on the delete symbol <span 
 style="background-color: #515151; border-radius: 4px; display: inline-table;"><img 
-style="vertical-align:middle" src="/editor/images/filter_remove.png" 
+  style="vertical-align:middle" src="/storage/style/images/filter_remove.png" 
 alt="&apos;delete&apos; symbol"/></span>
 at the filter in question, thus
 expanding the search again. Filters may be removed all at once by clicking on the red 
@@ -286,7 +286,7 @@ Clicking on a work&apos;s title opens the detailed view.</p>
 <h2><a name="contents">The structure and contents of each record</a></h2>
 <p>A certain amount of information is displayed directly on each record. For the sake of clarity, 
 other data may be hidden under the tabs with a plus sign <img 
-src="/editor/images/plus.png" alt="plus sign"/>, that is &apos;Music&apos;,  
+  src="/storage/style/images/plus.png" alt="plus sign"/>, that is &apos;Music&apos;,  
 &apos;Performances&apos;, &apos;Sources&apos;,
 &apos;Primary texts&apos; and &apos;Bibliography&apos;. By clicking on the sign
 the hidden information will unfold and may be closed again. </p>
