fixed a typo; added instruments to proof list
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@137 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cnw/appendix.html
+++ b/cnw/appendix.html
@@ -822,7 +822,7 @@ København</span></a> <a class="abbr" href="javascript:void(0);">CNS<span class=
                     <div><i>Hymne til Danmark</i> 'Danmark i tusind Aar' 
                         <ul class="bullet">
                             <li>arranged for wind band (<a class="abbr rism" href="javascript:void(0);">DK-Kk<span class="expan">Det Kongelige Bibliotek, 
-København</span></a>, DMF 0513 H2)</li>
+København</span></a> DMF 0513 H2)</li>
                     </ul>
                     </div>
                 </div>
