--- a/cnw/appendix.html
+++ b/cnw/appendix.html
@@ -47,7 +47,7 @@ København</span></a> <a class="abbr" href="javascript:void(0);">CNS<span class=
                         2)</p>
                 </div>
                 <div><p class="work_number"><a class="anchor" name="CNW_A_5">CNW A 5</a></p>
-                    <p>Fragment for string quartet, score, sketches (<a class="abbr rism" href="javascript:void(0);">DK-Kk<span class="expan">Det Kongelige Bibliotek, 
+                    <p>[Kvartet]. Fragment for string quartet, score, sketches (<a class="abbr rism" href="javascript:void(0);">DK-Kk<span class="expan">Det Kongelige Bibliotek, 
 København</span></a> <a class="abbr" href="javascript:void(0);">CNS<span class="expan">Birgit Bjørnum &amp; Klaus Møllerhøj: <i>Carl Nielsens Samling. Katalog over komponistens musikhåndskrifter i Det kongelige Bibliotek / The Carl Nielsen Collection. A Catalogue of the Composer's Musical Manuscripts in the Royal Library</i>. The Royal Library: Copenhagen 1992. </span></a> 353c)</p>
                 </div>
                 <div><p class="work_number"><a class="anchor" name="CNW_A_6">CNW A 6</a></p>
@@ -72,7 +72,7 @@ København</span></a> <a class="abbr" href="javascript:void(0);">CNS<span class=
                         6)</p>
                 </div>
                 <div><p class="work_number"><a class="anchor" name="CNW_A_10">CNW A 10</a></p>
-                    <p>Piano piece in B flat major, dated 23 January 1895 (<a class="abbr rism" href="javascript:void(0);">DK-Kk<span class="expan">Det Kongelige Bibliotek, 
+                    <p>[Klaverstykke]. Piano piece in B flat major, dated 23 January 1895 (<a class="abbr rism" href="javascript:void(0);">DK-Kk<span class="expan">Det Kongelige Bibliotek, 
 København</span></a> <a class="abbr" href="javascript:void(0);">CNS<span class="expan">Birgit Bjørnum &amp; Klaus Møllerhøj: <i>Carl Nielsens Samling. Katalog over komponistens musikhåndskrifter i Det kongelige Bibliotek / The Carl Nielsen Collection. A Catalogue of the Composer's Musical Manuscripts in the Royal Library</i>. The Royal Library: Copenhagen 1992. </span></a> 6)</p>
                 </div>
                 <div><p class="work_number"><a class="anchor" name="CNW_A_11">CNW A 11</a></p>
