--- a/cnw/introduction.html
+++ b/cnw/introduction.html
@@ -104,18 +104,18 @@ works. In addition, CNW distinguishes between instrumental and vocal music:
 instrumental excerpts of larger works are basically not interpreted as independent
 works. Thus the <i>&apos;Aladdin&apos; Suite</i>, for instance, is placed under the music 
 for the play, <i>Musik til Adam Oehlenschlägers skuespil 
-&apos;Aladdin eller Den forunderlige Lampe&apos;</i> <a class="work_number_reference" 
+&quot;Aladdin eller Den forunderlige Lampe&quot;</i> <a class="work_number_reference" 
 title="View work details" href="document.xq?doc=cnw0017.xml">CNW 17</a>.
 Similarly, <i>Taagen letter</i> (The Fog is Lifting) is only to be found in relation to <i>Musik til Helge Rodes
-skuespil &apos;Moderen&apos;</i> <a class="work_number_reference" href="document.xq?doc=cnw0018.xml"
+skuespil &quot;Moderen&quot;</i> <a class="work_number_reference" href="document.xq?doc=cnw0018.xml"
 title="View work details" >CNW 18</a>, in spite of the fact that <i
 >Taagen letter</i>, in various arrangements, is far better known as
 an independent piece than the stage music for the play as a whole.</p>
-<p>Nielsen&apos;s orchestral piece, <i>Saga-drøm</i> <a 
+<p>Nielsen&apos;s orchestral piece, <i>Saga-Drøm</i> <a 
 class="work_number_reference" href="document.xq?doc=cnw0035.xml"
 title="View work details" >CNW 35</a>, is on the other hand listed as a separate work,
 even though it was also used as part of the music for the play, <i>Moderen</i>.
-This is due to the fact that Nielsen conceived <i>Saga-drøm</i> as a work of its own
+This is due to the fact that Nielsen conceived <i>Saga-Drøm</i> as a work of its own
 several years before he decided to include it in <i>Moderen</i>.
 </p>
 
@@ -175,7 +175,7 @@ which the collection contains) as well as the sources related to that particular
 collection. The collection is located by clicking on its title
 appearing under the &apos;Contained in:&apos; heading. The description of a single
 song of a collection, however, is found by proceeding to the song&apos;s title in the index 
-of the collection (under the heading &apos;Contains:&apos;).</p>
+of the collection (under the heading &apos;Includes:&apos;).</p>
 
 <div class="toplink noprint"><a href="#top">To top of page</a></div>
 <h3><a name="arrangements">Arrangements and re-instrumentations</a></h3> 
@@ -205,7 +205,8 @@ which Nielsen re-used with another text in 1924 (&apos;Danevang med grønne bred
 date they were sometimes revised to such an extent that it hardly makes
 sense to assign them to one particular time in Nielsen&apos;s production. The
 CNW numbers are therefore arranged according to genre 
-though a certain chronology has been sought within each genre. </p>
+though a certain chronology has been sought within each genre. 
+The chronological order roughly follows the date of completion of the first version of the work. </p>
 <p>As to the songs, CNW retains the overall arrangement of the Nielsen Edition. 
 The songs are organized as follows according to the songs&apos; original scoring and context:
 <br/>&#160;</p> 
@@ -221,6 +222,9 @@ The songs are organized as follows according to the songs&apos; original scoring
 <tr><td style="padding-top: 8px;">Unison songs</td><td style="padding-top: 8px;">Songs published in collections<br/>Separate songs</td></tr>
 </table>
 
+        <p>Exceptions to this sequence are a few songs and instrumental pieces added to the catalogue 
+          at a late stage when most numbers had already been assigned and published.</p>
+
 <div class="toplink noprint"><a href="#top">To top of page</a></div>
 <h2><a name="howto">How to use the catalogue</a></h2>
 <p>The catalogue&apos;s primary entry to the records is the list of work titles. 
@@ -234,27 +238,23 @@ list there are different settings as to how the results may be displayed.</p>
 the following possibilities to change or limit the search are listed:</p>
 <ul>
 <li>Keywords:
-free text search (may for example be used for searching title keywords,
-for a particular CNW number or for records mentioning a particular person). The
-search is not case sensitive and search words may be truncated with an asterisk (*).</li>
+free text search (may for example be used for searching places or genre keywords). The
+search is not case sensitive but boolean operators (AND, OR) must be uppercase. 
+Search terms may be truncated with an asterisk (*).</li>
 <li>Year of composition: 
 the search may be limited to works that are composed in
 a particular period, which is obtained by adjusting the
-slides and clicking the &apos;Search&apos; button. Please note that searching by year
-only includes that year which marks the end of the period. A work listed as having
-been composed between 1880 and 1883 will thus be found only by searching for
-works from a period including the year 1883. Note also that
-when searching for year of composition, undated works will not turn up.</li>
+slides and clicking the &apos;Search&apos; button. Searching by year
+includes all works completed or in progress during the desired period.</li>
 <li>Genre:
 by clicking on a genre designation, the search is limited to those works
 that are listed under that particular genre as the work&apos;s primary genre.
-Several works may have the genre added as a secondary designation. These records are
-found by searching the genre in the free text search field instead. </li>
-<li>Anthologies:
-as a standard the list of search results does not include anthologies
-(song collections) as they are not recorded as works with a CNW number (see
-work definition above). In order to include such collections in the search,
-the checkbox &apos;Include anthologies&apos; must be ticked off.</li>
+Other genre designation such as 'cantata' may be searched for using the keyword search field. </li>
+<li>Song collections:
+as a standard the list of search includes not only the individual songs by Nielsen but also 
+the song collections in which they appeared such as <i>Folkehøjskolens Melodibog</i>
+or <i>Salmer og aandelige Sange</i>. In order to exclude such collections from the search results,
+the checkbox &apos;Exclude anthologies&apos; must be ticked off.</li>
 </ul>
 <p>All search limitations function
 additively, that is, a simultaneous use of several search parameters confines the
@@ -305,7 +305,11 @@ heterogeneous and a seemingly inconsistent practice which, however, has
 been retained rather than modernized, partly because modernized spelling would be just as dated
 (though to a later time) and partly because modernization is also a question
 of degree which in the extreme would not only include
-spelling and punctuation but also the choice of words.</p>
+spelling and punctuation but also the choice of words.
+Furthermore, the variations in Nielsen’s orthography not simply reflect general changes of his time 
+but also a conscious choice of orthography according to context. 
+It may be noted, for instance, that <i>Der sad en fisker så tankefuld</i> was actually composed 
+  several years before <i>Tyst som Aa i Engen rinder</i>.</p>
 <p>Several of Nielsen&apos;s songs were published in various contexts with distinct orthographies: 
 <i>Melodier til Sangbogen Danmark</i> (1924), for
 example, employs the older orthography while <i>Folkehøjskolens
