--- a/cnw/preface.html
+++ b/cnw/preface.html
@@ -12,14 +12,20 @@
                 prepared of which <a class="abbr" 
                     href="javascript:void(0);">Fog and Schousboe&apos;s<span class="expan">Dan Fog and Torben Schousboe: 
                         <i>Carl Nielsen. Kompositioner. En Bibliografi</i>. Copenhagen 1965</span></a> bibliography (1965) was the first.
-                The <a class="abbr" 
+                Also thr <a class="abbr" 
                     href="javascript:void(0);">Bjørnum and
                     Møllerhøj<span 
                         class="expan">Birgit Bjørnum and Klaus Møllerhøj, <i>Carl Nielsens
                             Samling. Katalog over komponistens musikhåndskrifter i Det kongelige Bibliotek</i>. Copenhagen 1992</span></a>  
                 description of Nielsen&apos;s manuscripts in The Royal Library (1992) is
-                one of the most important groundworks though it strictly speaking is not a work
-                catalogue.</p> 
+                one of the most important groundworks. 
+                Strictly speaking however, none of these are catalogues of <i>works</i>. Their numberings are mainly 
+                related to bibliographical items – prints (FS) and manuscripts (CNS), respectively. 
+                Though they may serve as work catalogues to some degree, there is no strict 
+                1:1 relationship between compositions and the catalogue numbers. For instance, 
+                FS numbers song collections (i.e. publications) rather than the individual songs; 
+                therefore, a single song may have as many as four different FS numbers, 
+                none of which can be used to identify the particular song. </p> 
             <p>The first complete survey of all Nielsen&apos;s compositions and their sources was not initiated,
                 however, until the foundation of the <a href="http://www.kb.dk/en/nb/dcm/cnu/" target="_blank"
                     title="The Carl Nielsen Edition">The Carl Nielsen Edition</a> <a class="abbr" 
