--- a/cnw/about.html
+++ b/cnw/about.html
@@ -19,12 +19,13 @@
                     WWW: <a href="http://www.kb.dk/dcm">www.kb.dk/dcm</a><br/>
                     E-mail: <a href="mailto://foa-dcm@kb.dk">foa-dcm@kb.dk</a></span></p> 
                 <p><span class="label">&#160;</span><span>&#169; 2014</span></p>
-                <p><span class="label">Translation of song texts' first lines:</span><span><br/>Holger Scheibel</span></p>
+                <p><span class="label">Translation of song titles and first lines:</span><span><br/>Holger Scheibel</span></p>
                 <p><span class="label">Technical development:</span><span>Sigfrid Lundberg, Axel Teich Geertinger</span></p>
-                <p><span class="label">Assistants:</span><span>Katarina Smitt Engberg, Niclas Nørby Hundahl</span></p>
+                <p><span class="label">Assistants:</span><span>Katarina Smitt Engberg</span></p>
                 <p><span class="label">Created with:</span><span><a href="http://www.kb.dk/en/nb/dcm/projekter/mermeid.html"
                     title="See MerMEId project page">MerMEId</a></span></p>
                 <p><span class="label">Sponsor: </span><span>Carl Nielsen og Anne Marie Carl-Nielsens Legat</span></p>
+                <p>&#160;</p>
             </div>
         </div>
     </body>
