updated text; layout adjustments
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@149 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cnw/introduction.html
+++ b/cnw/introduction.html
@@ -204,9 +204,7 @@ which Nielsen re-used with another text in 1924 (&apos;Danevang med grønne bred
 <p>Often Nielsen&apos;s works cannot be dated precisely. They were composed over longer periods, and at a later
 date they were sometimes revised to such an extent that it hardly makes
 sense to assign them to one particular time in Nielsen&apos;s production. The
-CNW numbers are therefore arranged according to genre 
-though a certain chronology has been sought within each genre. 
-The chronological order roughly follows the date of completion of the first version of the work. </p>
+CNW numbers are therefore arranged according to genre. </p>
 <p>As to the songs, CNW retains the overall arrangement of the Nielsen Edition. 
 The songs are organized as follows according to the songs&apos; original scoring and context:
 <br/>&#160;</p> 
@@ -221,9 +219,12 @@ The songs are organized as follows according to the songs&apos; original scoring
 <tr><td style="padding-top: 8px;">Equal voices</td><td style="padding-top: 8px;">Songs published in collections<br/>Separate songs</td></tr>
 <tr><td style="padding-top: 8px;">Unison songs</td><td style="padding-top: 8px;">Songs published in collections<br/>Separate songs</td></tr>
 </table>
-
-        <p>Exceptions to this sequence are a few songs and instrumental pieces added to the catalogue 
-          at a late stage when most numbers had already been assigned and published.</p>
+<p>Within each of these categories the chronological order roughly follows the 
+date of completion of the first version of the song.</p>
+<p>Exceptions to the sequence of numbers are a few songs and instrumental pieces added to the catalogue 
+at a late stage when most numbers had already been assigned and published.
+These late-coming pieces are listed at the end of the main sections they belong to 
+(instrumental works and vocal music, respectively).</p>
 
 <div class="toplink noprint"><a href="#top">To top of page</a></div>
 <h2><a name="howto">How to use the catalogue</a></h2>
@@ -328,7 +329,7 @@ class="work_number_reference" title="View work details"
 href="document.xq?doc=cnw0010.xml">CNW 10</a>, because the title <i>Tove</i> would refer to the play as a whole.</p>
 <p>Many of the songs were never provided with an actual title by Nielsen; 
 in these cases the first line of the text has been
-added as title in quotation marks. In the remaining instances the text
+added as title. In the remaining instances the text
 incipit is given as the alternative title, also when the song is better known by
 its first line (e.g. <i>Hjemvee</i> <a class="work_number_reference" title="View work details" 
 href="document.xq?doc=cnw205.xml">CNW 205</a>, better
@@ -393,7 +394,9 @@ these instances, the link refers to the off-prints. </p>
 <p>The overview of sources for each work includes only those from Nielsen&apos;s lifetime, 
 and directly related to Nielsen; 
 it also includes sources representing his own versions of the works. 
-Other composers&apos; arrangements of Nielsen&apos;s works are thus not included.
+Other composers&apos; arrangements of Nielsen&apos;s works are thus not included 
+included in the main catalogue; please refer to the 
+  <a href="appendix.xq" title="CNW Appendix">appendix</a> for a list of arrangements by Nielsen’s contemporaries.
 </p>
 <p>The source descriptions are minimal, providing only the most basic information for identification. 
 More detailed descriptions are available in the volumes 
