--- a/cnw/about.html
+++ b/cnw/about.html
@@ -21,7 +21,7 @@
                 <p><span class="label">&#160;</span><span>&#169; 2014</span></p>
                 <p><span class="label">Translation of song titles and first lines:</span><span><br/>Holger Scheibel</span></p>
                 <p><span class="label">Technical development:</span><span>Sigfrid Lundberg, Axel Teich Geertinger</span></p>
-                <p><span class="label">Assistants:</span><span>Katarina Smitt Engberg</span></p>
+                <p><span class="label">Assistant:</span><span>Katarina Smitt Engberg</span></p>
                 <p><span class="label">Created with:</span><span><a href="http://www.kb.dk/en/nb/dcm/projekter/mermeid.html"
                     title="See MerMEId project page">MerMEId</a></span></p>
                 <p><span class="label">Sponsor: </span><span>Carl Nielsen og Anne Marie Carl-Nielsens Legat</span></p>
