--- a/cat-site/cnw/appendix.html
+++ b/cat-site/cnw/appendix.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-        <title></title>
+	<title id="CNW">Catalogue of Carl Nielsen&apos;s Works</title>
     </head>
     <body>
         <div id="main" class="appendix">
