--- a/cat-site/cnw/menu.html
+++ b/cat-site/cnw/menu.html
@@ -1,6 +1,7 @@
 <div id="menu" class="noprint">
    <a href="preface.xq" class="preface">Preface</a>
    <a href="introduction.xq" class="introduction>Introduction</a>
+   <a href="navigation.xq" class="navigation">Catalogue</a>
    <a href="appendix.xq" class="appendix">Appendix</a>
-   <a href="about.xq" class="about">About CNW</a>
+   <a href="about.xq" class="about">About CNW</a>)
 </div> 
