consolidating the distinction between software and catalogue
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@199 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cat-site/hartw/about.html
+++ b/cat-site/hartw/about.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div id="main">
-            <h1>Catalogue of Carl Nielsen&apos;s Works (CNW)</h1>
+            <h1>Catalogue of Johan Peter Emilius Hartmann's Works</h1>
             <div id="colophon">
                 <p>
                     <span class="label">Edited by: </span><span>Niels Bo Foltmann, Axel Teich Geertinger, Peter Hauge, Niels Krabbe, Bjarke Moe, Elly Bruunshuus Petersen</span>
