--- a/cat-site/hartw/document.html
+++ b/cat-site/hartw/document.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-    <title id="CNW">Catalogue of Carl Nielsen&apos;s Works</title>
+    <title id="HARTW">Catalogue of Johan Peter Emilius Hartmann&apos;s Works</title>
   </head>
   <body>
   </body>
