--- a/cat-site/hartw/about.html
+++ b/cat-site/hartw/about.html
@@ -1,14 +1,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-    <title id="HARTW">Catalogue of Johan Peter Emilius Hartmann's Works</title>
+    <title id="HartW">Catalogue of Johan Peter Emilius Hartmann's Works</title>
   </head>
   <body>
     <div id="main">
       <h1>Catalogue of Johan Peter Emilius Hartmann's Works</h1>
       <div id="colophon">
         <p>
-          <span class="label">Edited by: </span><span>Niels Bo Foltmann, Axel Teich Geertinger, Peter Hauge, Niels Krabbe, Bjarke Moe, Elly Bruunshuus Petersen</span>
+          <span class="label">Edited by: </span><span>Inger Sørensen</span>
+        </p>
+        <p>
+          <span class="label">Incipits: </span><span>Birthe Skou</span>
         </p>
         <p><span class="label">Published by: </span><span>Danish Centre for Music Publication<br/>
             The Royal Library<br/>
@@ -17,13 +20,11 @@
             Denmark<br/>
             WWW: <a href="http://www.kb.dk/dcm">www.kb.dk/dcm</a><br/>
             E-mail: <a href="mailto://foa-dcm@kb.dk">foa-dcm@kb.dk</a></span></p> 
-        <p><span class="label">&#160;</span><span>&#169; 2014</span></p>
-        <p><span class="label">Translation of song titles and first lines:</span><span><br/>Holger Scheibel</span></p>
+        <p><span class="label">&#160;</span><span>&#169; 2016</span></p>
         <p><span class="label">Technical development:</span><span>Sigfrid Lundberg, Axel Teich Geertinger</span></p>
-        <p><span class="label">Assistant:</span><span>Katarina Smitt Engberg</span></p>
         <p><span class="label">Created with:</span><span><a href="http://www.kb.dk/en/nb/dcm/projekter/mermeid.html"
 							    title="See MerMEId project page">MerMEId</a></span></p>
-        <p><span class="label">Sponsor: </span><span>Carl Nielsen og Anne Marie Carl-Nielsens Legat</span></p>
+        <p><span class="label">Sponsors: </span><span>...</span></p>
         <p>&#160;</p>
       </div>
     </div>
