--- a/cat-site/hartw/preface.html
+++ b/cat-site/hartw/preface.html
@@ -2,15 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-    <title id="HARTW">Catalogue of Johan Peter Emilius Hartmann's Works</title>
+    <title id="HartW">Catalogue of Johan Peter Emilius Hartmann's Works</title>
   </head>
   <body>
     <div id="main">
       <h1>Preface</h1>
-      <p>The Catalogue of J. P. E. Hartmanns Works (CNW) is The Danish Centre
-      for Music Publication collaborates with <i><a
-      href="http://carlnielsen.org" title="Carl Nielsen 2015">Carl Nielsen
-      2015</a></i>.</p>
+      <p>The Catalogue of J. P. E. Hartmanns Works (HartW) ...</p>
       <div><br clear="all"/></div>
     </div>
   </body>
