--- a/cat-site/hartw/appendix.html
+++ b/cat-site/hartw/appendix.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta content="text/html; charset=utf-8" http-equiv="content-type" />
-	<title id="HARTW">Catalogue of Johan Peter Emilius Hartmann's Works</title>
+	<title id="HartW">Catalogue of Johan Peter Emilius Hartmann's Works</title>
     </head>
     <body>
         <div id="main" class="appendix">
