--- a/cat-site/cnw/preface.html
+++ b/cat-site/cnw/preface.html
@@ -20,8 +20,8 @@
         one of the most important groundworks. 
         Strictly speaking however, none of these are catalogues of <i>works</i>. Their numberings are mainly 
         related to bibliographical items – prints (FS) and manuscripts (CNS), respectively. 
-        Though they may serve as work catalogues to some degree, there is no strict 
-        1:1 relationship between compositions and the catalogue numbers. For instance, 
+        Though they may to some degree serve as work catalogues, there is no strict 
+        one-to-one relationship between compositions and the catalogue numbers. For instance, 
         FS numbers song collections (i.e. publications) rather than the individual songs; 
         therefore, a single song may have as many as four different FS numbers, 
         none of which can be used to identify the particular song. </p> 
@@ -47,8 +47,7 @@
         sources, among others the <a class="abbr" 
 				     href="javascript:void(0);"><i>Carl Nielsen Letters</i><span class="expan">John Fellow (ed.), <i>Carl
               Nielsen Brevudgaven</i>. Copenhagen 2005–2015</span></a>, the publication
-        of Nielsen&apos;s other <a class="abbr" 
-				   href="javascript:void(0);"><i>essays</i><span class="expan">John Fellow (ed.), <i>Carl
+        of <a class="abbr" href="javascript:void(0);">Nielsen&apos;s essays<span class="expan">John Fellow (ed.), <i>Carl
               Nielsen til sin samtid</i>. Copenhagen 1999</span></a>, and the current bibliography
         available in the journal, <a href="https://tidsskrift.dk/index.php/carlnielsenstudies" 
 				     title="Carl Nielsen Studies – fulltext online" target="_blank"><i>Carl Nielsen Studies</i></a>,
